test/failing/missing_condition_if.yadl
// RUN: DEFAULT
if () {
 print(1 + 1)
}


